--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -32,27 +32,89 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.shape.Rectangle?>
 
-<VBox prefHeight="562.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.mainController">
+<VBox prefHeight="562.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.mainController">
   <children>
       <TabPane prefHeight="566.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab fx:id="shopTab" text="Shop View">
                <content>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane prefHeight="863.0" prefWidth="1037.0">
                      <children>
-                        <ListView fx:id="itemsList" layoutX="37.0" layoutY="118.0" prefHeight="373.0" prefWidth="396.0" />
-                        <TextField fx:id="itemSearch" layoutX="37.0" layoutY="80.0" prefHeight="26.0" prefWidth="226.0" promptText="Search item..." />
-                        <Label fx:id="itemDescription" layoutX="487.0" layoutY="73.0" prefHeight="351.0" prefWidth="280.0" text="insert item desc" />
-                        <Button fx:id="addToCart" layoutX="545.0" layoutY="452.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="164.0" text="Add to Cart" />
+                        <Pane fx:id="storeField" layoutX="8.0" layoutY="75.0" prefHeight="429.0" prefWidth="312.0">
+                           <children>
+                              <TextField fx:id="itemSearch" layoutX="36.0" layoutY="14.0" prefHeight="26.0" prefWidth="226.0" promptText="Search item..." />
+                              <ScrollPane fx:id="itemList" layoutX="106.0" layoutY="55.0" prefHeight="359.0" prefWidth="200.0">
+                                 <content>
+                                    <ListView fx:id="storeList" prefHeight="354.0" prefWidth="185.0">
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
+                                    </ListView>
+                                 </content>
+                              </ScrollPane>
+                              <Label layoutX="27.0" layoutY="62.0" prefHeight="17.0" prefWidth="66.0" text="Filters" />
+                              <ListView fx:id="filters" layoutX="14.0" layoutY="87.0" prefHeight="296.0" prefWidth="84.0" />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="itemField" layoutX="332.0" layoutY="75.0" prefHeight="398.0" prefWidth="446.0">
+                           <children>
+                              <Button fx:id="addToCart" layoutX="141.0" layoutY="347.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="164.0" text="Add to Cart" />
+                              <BorderPane layoutX="94.0" layoutY="18.0" prefHeight="178.0" prefWidth="259.0">
+                                 <left>
+                                    <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                 </left>
+                                 <bottom>
+                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </bottom>
+                                 <right>
+                                    <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                 </right>
+                                 <top>
+                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </top>
+                              </BorderPane>
+                              <Polygon fill="DODGERBLUE" layoutX="368.0" layoutY="119.0" onMouseClicked="#NextImgR" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="15.0" />
+                              <BorderPane layoutX="94.0" layoutY="213.0" prefHeight="88.0" prefWidth="259.0">
+                                 <left>
+                                    <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                 </left>
+                                 <bottom>
+                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </bottom>
+                                 <top>
+                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </top>
+                                 <right>
+                                    <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                 </right>
+                                 <center>
+                                    <Label fx:id="itemDescription" alignment="TOP_LEFT" prefHeight="88.0" prefWidth="233.0" text="itemDescription" wrapText="true" BorderPane.alignment="TOP_LEFT">
+                                       <BorderPane.margin>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </BorderPane.margin>
+                                    </Label>
+                                 </center>
+                              </BorderPane>
+                              <Polygon fill="DODGERBLUE" layoutX="79.0" layoutY="119.0" onMouseClicked="#NextImgL" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="270.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="-15.0" />
+                           </children>
+                        </Pane>
+                        <HBox layoutX="25.0" layoutY="14.0" prefHeight="59.0" prefWidth="753.0" />
                      </children>
                   </AnchorPane>
                </content>
@@ -61,10 +123,74 @@
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="cartList" layoutX="48.0" layoutY="121.0" prefHeight="362.0" prefWidth="315.0" />
-                        <Label fx:id="itemDescription1" layoutX="414.0" layoutY="121.0" prefHeight="241.0" prefWidth="326.0" text="insert item description" />
-                        <Button fx:id="cartRemove" layoutX="188.0" layoutY="61.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
-                        <Label fx:id="totalProce" layoutX="414.0" layoutY="387.0" prefHeight="48.0" prefWidth="159.0" text="Total: $///.//" />
+                        <Pane layoutX="26.0" layoutY="40.0" prefHeight="454.0" prefWidth="320.0">
+                           <children>
+                              <ScrollPane layoutX="17.0" layoutY="100.0" prefHeight="223.0" prefWidth="284.0">
+                                 <content>
+                                    <ListView fx:id="cartList" prefHeight="233.0" prefWidth="269.0" />
+                                 </content>
+                              </ScrollPane>
+                              <Button fx:id="cartRemove" layoutX="73.0" layoutY="402.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
+                              <BorderPane layoutX="30.0" layoutY="338.0" prefHeight="43.0" prefWidth="259.0">
+                                 <bottom>
+                                    <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </bottom>
+                                 <top>
+                                    <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </top>
+                                 <left>
+                                    <Rectangle fill="DODGERBLUE" height="29.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="10.0" BorderPane.alignment="CENTER" />
+                                 </left>
+                                 <right>
+                                    <Rectangle fill="DODGERBLUE" height="29.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="10.0" BorderPane.alignment="CENTER" />
+                                 </right>
+                                 <center>
+                                    <Label fx:id="totalPriceView" prefHeight="17.0" prefWidth="231.0" text="Total: $12312312" BorderPane.alignment="CENTER" />
+                                 </center>
+                              </BorderPane>
+                           </children>
+                        </Pane>
+                        <Pane fx:id="itemField1" layoutX="338.0" layoutY="96.0" prefHeight="398.0" prefWidth="446.0">
+                           <children>
+                              <BorderPane layoutX="94.0" layoutY="18.0" prefHeight="178.0" prefWidth="259.0">
+                                 <left>
+                                    <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                 </left>
+                                 <bottom>
+                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </bottom>
+                                 <right>
+                                    <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                 </right>
+                                 <top>
+                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </top>
+                              </BorderPane>
+                              <Polygon fill="DODGERBLUE" layoutX="368.0" layoutY="119.0" onMouseClicked="#NextImgR" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="15.0" />
+                              <BorderPane layoutX="94.0" layoutY="213.0" prefHeight="88.0" prefWidth="259.0">
+                                 <left>
+                                    <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                 </left>
+                                 <bottom>
+                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </bottom>
+                                 <right>
+                                    <Rectangle fill="DODGERBLUE" height="88.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
+                                 </right>
+                                 <top>
+                                    <Rectangle fill="DODGERBLUE" height="14.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
+                                 </top>
+                                 <center>
+                                    <Label fx:id="itemDescription1" alignment="TOP_LEFT" prefHeight="88.0" prefWidth="233.0" text="itemDescription" wrapText="true" BorderPane.alignment="TOP_LEFT">
+                                       <BorderPane.margin>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </BorderPane.margin>
+                                    </Label>
+                                 </center>
+                              </BorderPane>
+                              <Polygon fill="DODGERBLUE" layoutX="79.0" layoutY="119.0" onMouseClicked="#NextImgL" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="270.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="-15.0" />
+                           </children>
+                        </Pane>
                      </children>
                   </AnchorPane>
                </content>
