--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -56,20 +56,16 @@
                <content>
                   <AnchorPane prefHeight="863.0" prefWidth="1037.0">
                      <children>
-                        <Pane fx:id="storeField" layoutX="8.0" layoutY="75.0" prefHeight="429.0" prefWidth="312.0">
+                        <Pane fx:id="storeField" layoutX="8.0" layoutY="75.0" prefHeight="430.0" prefWidth="352.0">
                            <children>
                               <TextField fx:id="itemSearch" layoutX="36.0" layoutY="14.0" prefHeight="26.0" prefWidth="226.0" promptText="Search item..." />
-                              <ScrollPane fx:id="itemList" layoutX="106.0" layoutY="55.0" prefHeight="359.0" prefWidth="200.0">
-                                 <content>
-                                    <ListView fx:id="storeList" prefHeight="354.0" prefWidth="185.0">
-                                       <padding>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </padding>
-                                    </ListView>
-                                 </content>
-                              </ScrollPane>
+                              <ListView fx:id="storeList" layoutX="137.0" layoutY="49.0" prefHeight="354.0" prefWidth="185.0">
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </padding>
+                              </ListView>
                               <Label layoutX="27.0" layoutY="62.0" prefHeight="17.0" prefWidth="66.0" text="Filters" />
-                              <ListView fx:id="FilterView" layoutX="14.0" layoutY="87.0" prefHeight="296.0" prefWidth="84.0" />
+                              <ListView fx:id="FilterView" layoutX="14.0" layoutY="88.0" prefHeight="296.0" prefWidth="113.0" />
                            </children>
                         </Pane>
                         <Pane fx:id="itemField" layoutX="332.0" layoutY="75.0" prefHeight="398.0" prefWidth="446.0">
