--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -71,7 +71,7 @@
                         <Pane fx:id="itemField" layoutX="332.0" layoutY="75.0" prefHeight="398.0" prefWidth="446.0">
                            <children>
                               <Button fx:id="addToCart" layoutX="141.0" layoutY="347.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="164.0" text="Add to Cart" />
-                              <BorderPane layoutX="94.0" layoutY="18.0" prefHeight="178.0" prefWidth="259.0">
+                              <BorderPane fx:id="imgViewer" layoutX="94.0" layoutY="18.0" prefHeight="178.0" prefWidth="259.0">
                                  <left>
                                     <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
                                  </left>
