--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -56,12 +56,12 @@
                <content>
                   <AnchorPane prefHeight="863.0" prefWidth="1037.0">
                      <children>
-                        <Pane fx:id="storeField" layoutX="31.0" layoutY="75.0" prefHeight="429.0" prefWidth="312.0">
+                        <Pane fx:id="storeField" layoutX="18.0" layoutY="75.0" prefHeight="430.0" prefWidth="325.0">
                            <children>
                               <TextField fx:id="itemSearch" layoutX="14.0" layoutY="15.0" prefHeight="26.0" prefWidth="195.0" promptText="Search item..." />
                               <ScrollPane fx:id="itemList" layoutX="106.0" layoutY="55.0" prefHeight="359.0" prefWidth="188.0">
                                  <content>
-                                    <ListView fx:id="storeList" prefHeight="354.0" prefWidth="185.0">
+                                    <ListView fx:id="storeList" prefHeight="354.0" prefWidth="187.0">
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
@@ -69,13 +69,13 @@
                                  </content>
                               </ScrollPane>
                               <Label layoutX="27.0" layoutY="62.0" prefHeight="17.0" prefWidth="66.0" text="Filters" />
-                              <ListView fx:id="FilterView" layoutX="14.0" layoutY="87.0" prefHeight="296.0" prefWidth="84.0" />
+                              <ListView fx:id="FilterView" layoutX="2.0" layoutY="87.0" prefHeight="296.0" prefWidth="96.0" />
                               <Button fx:id="searchButton" layoutX="219.0" layoutY="15.0" mnemonicParsing="false" onAction="#pressSearch" prefHeight="25.0" prefWidth="73.0" text="Search" />
                            </children>
                         </Pane>
                         <Pane fx:id="itemField" layoutX="332.0" layoutY="75.0" prefHeight="398.0" prefWidth="446.0">
                            <children>
-                              <Button fx:id="addToCart" layoutX="141.0" layoutY="347.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="164.0" text="Add to Cart" />
+                              <Button fx:id="addToCart" layoutX="141.0" layoutY="347.0" mnemonicParsing="false" onAction="#toCart" prefHeight="37.0" prefWidth="164.0" text="Add to Cart" />
                               <BorderPane layoutX="94.0" layoutY="18.0" prefHeight="178.0" prefWidth="259.0">
                                  <left>
                                     <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
@@ -131,7 +131,7 @@
                                     <ListView fx:id="cartList" prefHeight="233.0" prefWidth="269.0" />
                                  </content>
                               </ScrollPane>
-                              <Button fx:id="cartRemove" layoutX="73.0" layoutY="402.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
+                              <Button fx:id="cartRemove" layoutX="73.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
                               <BorderPane layoutX="30.0" layoutY="338.0" prefHeight="43.0" prefWidth="259.0">
                                  <bottom>
                                     <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
@@ -192,6 +192,9 @@
                               <Polygon fill="DODGERBLUE" layoutX="79.0" layoutY="119.0" onMouseClicked="#NextImgL" points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="270.0" scaleY="0.3" smooth="false" stroke="BLACK" strokeType="INSIDE" translateX="-15.0" />
                            </children>
                         </Pane>
+                        <Button fx:id="removeYes" layoutX="83.0" layoutY="494.0" mnemonicParsing="false" onAction="#btnYes" prefHeight="26.0" prefWidth="44.0" text="Yes" visible="false" />
+                        <Button fx:id="removeNo" layoutX="134.0" layoutY="494.0" mnemonicParsing="false" onAction="#btnNo" prefHeight="26.0" prefWidth="44.0" text="No" visible="false" />
+                        <Label fx:id="removeLabel" layoutX="187.0" layoutY="498.0" text="Remove all of this item?" visible="false" />
                      </children>
                   </AnchorPane>
                </content>
