--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -36,7 +36,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -66,12 +65,12 @@
                               </ListView>
                               <Label layoutX="27.0" layoutY="62.0" prefHeight="17.0" prefWidth="66.0" text="Filters" />
                               <ListView fx:id="FilterView" layoutX="9.0" layoutY="87.0" onMouseClicked="#Filterclicked" prefHeight="296.0" prefWidth="130.0" />
-                              <Button fx:id="searchButton" layoutX="219.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#pressSearch" prefHeight="25.0" prefWidth="73.0" text="Search" />
+                              <Button fx:id="searchButton" layoutX="219.0" layoutY="15.0" mnemonicParsing="false" onAction="#pressSearch" prefHeight="25.0" prefWidth="73.0" text="Search" />
                            </children>
                         </Pane>
                         <Pane fx:id="itemField" layoutX="332.0" layoutY="75.0" prefHeight="398.0" prefWidth="446.0">
                            <children>
-                              <Button fx:id="addToCart" layoutX="141.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#toCart" prefHeight="37.0" prefWidth="164.0" text="Add to Cart" />
+                              <Button fx:id="addToCart" layoutX="141.0" layoutY="347.0" mnemonicParsing="false" onAction="#toCart" prefHeight="37.0" prefWidth="164.0" text="Add to Cart" />
                               <BorderPane fx:id="imgViewer" layoutX="94.0" layoutY="18.0" prefHeight="178.0" prefWidth="259.0">
                                  <left>
                                     <Rectangle fill="DODGERBLUE" height="153.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" BorderPane.alignment="CENTER" />
@@ -122,12 +121,8 @@
                      <children>
                         <Pane layoutX="26.0" layoutY="40.0" prefHeight="454.0" prefWidth="320.0">
                            <children>
-                              <ScrollPane layoutX="17.0" layoutY="100.0" prefHeight="223.0" prefWidth="284.0">
-                                 <content>
-                                    <ListView fx:id="cartList" prefHeight="233.0" prefWidth="269.0" />
-                                 </content>
-                              </ScrollPane>
-                              <Button fx:id="cartRemove" layoutX="73.0" layoutY="402.0" mnemonicParsing="false" onMouseClicked="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
+                              <ListView fx:id="cartList" layoutX="21.0" layoutY="69.0" prefHeight="233.0" prefWidth="269.0" />
+                              <Button fx:id="cartRemove" layoutX="73.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
                               <BorderPane layoutX="30.0" layoutY="338.0" prefHeight="43.0" prefWidth="259.0">
                                  <bottom>
                                     <Rectangle fill="DODGERBLUE" height="10.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="259.0" BorderPane.alignment="CENTER" />
@@ -145,6 +140,13 @@
                                     <Label fx:id="totalPriceView" prefHeight="17.0" prefWidth="231.0" text="Total: $12312312" BorderPane.alignment="CENTER" />
                                  </center>
                               </BorderPane>
+                              <Pane fx:id="questionBar" layoutX="21.0" layoutY="14.0" prefHeight="51.0" prefWidth="269.0" visible="false">
+                                 <children>
+                                    <Button fx:id="questionyesBar" layoutX="32.0" layoutY="22.0" mnemonicParsing="false" onAction="#questionHitYes" prefHeight="25.0" prefWidth="84.0" text="Yes" />
+                                    <Button fx:id="questionNoBar" layoutX="145.0" layoutY="24.0" mnemonicParsing="false" onAction="#questionHitNo" prefHeight="25.0" prefWidth="84.0" text="No" />
+                                    <Label alignment="TOP_CENTER" layoutX="23.0" layoutY="2.0" prefHeight="17.0" prefWidth="225.0" text="Remove All?" textAlignment="CENTER" />
+                                 </children>
+                              </Pane>
                            </children>
                         </Pane>
                         <Pane fx:id="itemField1" layoutX="338.0" layoutY="96.0" prefHeight="398.0" prefWidth="446.0">
