--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -58,7 +58,7 @@
                         <Pane fx:id="storeField" layoutX="6.0" layoutY="75.0" prefHeight="430.0" prefWidth="367.0">
                            <children>
                               <TextField fx:id="itemSearch" layoutX="14.0" layoutY="15.0" prefHeight="26.0" prefWidth="195.0" promptText="Search item..." />
-                              <ListView fx:id="storeList" layoutX="150.0" layoutY="58.0" prefHeight="354.0" prefWidth="185.0">
+                              <ListView fx:id="storeList" layoutX="150.0" layoutY="58.0" onMouseClicked="#ShopClicked" prefHeight="354.0" prefWidth="185.0">
                                  <padding>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
@@ -121,7 +121,7 @@
                      <children>
                         <Pane layoutX="26.0" layoutY="40.0" prefHeight="454.0" prefWidth="320.0">
                            <children>
-                              <ListView fx:id="cartList" layoutX="21.0" layoutY="69.0" prefHeight="233.0" prefWidth="269.0" />
+                              <ListView fx:id="cartList" layoutX="21.0" layoutY="69.0" onMouseClicked="#CarClicked" prefHeight="233.0" prefWidth="269.0" />
                               <Button fx:id="cartRemove" layoutX="73.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
                               <BorderPane layoutX="30.0" layoutY="338.0" prefHeight="43.0" prefWidth="259.0">
                                  <bottom>
@@ -137,7 +137,7 @@
                                     <Rectangle fill="DODGERBLUE" height="29.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="10.0" BorderPane.alignment="CENTER" />
                                  </right>
                                  <center>
-                                    <Label fx:id="totalPriceView" prefHeight="17.0" prefWidth="231.0" text="Total: $12312312" BorderPane.alignment="CENTER" />
+                                    <Label fx:id="totalPriceView" alignment="TOP_CENTER" prefHeight="17.0" prefWidth="231.0" text="Total: $0.00" BorderPane.alignment="CENTER" />
                                  </center>
                               </BorderPane>
                               <Pane fx:id="questionBar" layoutX="21.0" layoutY="14.0" prefHeight="51.0" prefWidth="269.0" visible="false">
