--- a/src/application/dsfinal.fxml
+++ b/src/application/dsfinal.fxml
@@ -121,7 +121,7 @@
                      <children>
                         <Pane layoutX="26.0" layoutY="40.0" prefHeight="454.0" prefWidth="320.0">
                            <children>
-                              <ListView fx:id="cartList" layoutX="21.0" layoutY="69.0" onMouseClicked="#CarClicked" prefHeight="233.0" prefWidth="269.0" />
+                              <ListView fx:id="cartList" layoutX="21.0" layoutY="69.0" onMouseClicked="#CartClicked" prefHeight="233.0" prefWidth="269.0" />
                               <Button fx:id="cartRemove" layoutX="73.0" layoutY="402.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="174.0" text="Remove Selected" />
                               <BorderPane layoutX="30.0" layoutY="338.0" prefHeight="43.0" prefWidth="259.0">
                                  <bottom>
